# libmkvtag

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  build_xcframework.sh
include/mkvtag/: mkvtag.h  mkvtag_error.h  mkvtag_types.h
libmkvtag/: CMakeLists.txt  README.md
libmkvtag/include/mkvtag/: module.modulemap
libmkvtag/src/ebml/: ebml_reader.c  ebml_vint.c  ebml_writer.c  ebml_writer.h
libmkvtag/src/io/: file_io.c
libmkvtag/src/mkv/: mkv_parser.c  mkv_seekhead.c  mkv_seekhead.h  mkv_tags.c  mkv_tags.h
libmkvtag/src/util/: buffer.c  buffer.h  string_util.c
src/: mkvtag.c
src/ebml/: ebml_ids.h  ebml_reader.c  ebml_reader.h  ebml_vint.c  ebml_vint.h  ebml_writer.c  ebml_writer.h
src/io/: file_io.c  file_io.h
src/mkv/: mkv_parser.c  mkv_parser.h  mkv_seekhead.c  mkv_seekhead.h  mkv_tags.c  mkv_tags.h
src/util/: buffer.c  string_util.h
tests/: CMakeLists.txt  test_mkvtag.c
